--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -4,7 +4,6 @@
 @using Kendo.Mvc.UI
 @using Telerik.Web.Mvc.UI
 @using GridEditMode = Kendo.Mvc.UI.GridEditMode
-@using System.Web.Helpers;
 @{
     ViewBag.Title = Html.Translate("New/Edit Dispatch");
     Layout = "~/Views/Shared/_MainLayoutWide.cshtml";
@@ -12,33 +11,33 @@
 @section Toolbar
 {
     <a class="btn toolbar-btn " data-buttontype="btn_save" data-submittedform="frmCreate"></a>
-      <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="@Url.Action("Index","Dispatch")"></a>
+    <a class="btn toolbar-btn " data-buttontype="btn_cancel" href="@Url.Action("Index","Dispatch")"></a>
 }
-@using (Html.BeginForm("CreateDispatch","Dispatch",FormMethod.Post,new {id="frmCreate"}))
+@using (Html.BeginForm("CreateDispatch", "Dispatch", FormMethod.Post, new { id = "frmCreate" }))
 {
-    @Html.HiddenFor(model=>model.DispatchAllocationID)
-    @Html.HiddenFor(model=>model.ProgramID)
-    @Html.HiddenFor(model=>model.HubID)
-    @Html.HiddenFor(model=>model.FDPID)
-    @Html.HiddenFor(model=>model.TransporterID)
-   // @Html.HiddenFor(model=>model.UnitID)
-   @Html.HiddenFor(model=>model.DispatchID) 
-   @Html.HiddenFor(model=>model.UserProfileID)
+    @Html.HiddenFor(model => model.DispatchAllocationID)
+    @Html.HiddenFor(model => model.ProgramID)
+    @Html.HiddenFor(model => model.HubID)
+    @Html.HiddenFor(model => model.FDPID)
+    @Html.HiddenFor(model => model.TransporterID)
+    // @Html.HiddenFor(model=>model.UnitID)
+    @Html.HiddenFor(model => model.DispatchID)
+    @Html.HiddenFor(model => model.UserProfileID)
     @Html.HiddenFor(model => model.SINumber)
-     @Html.HiddenFor(model => model.Region)
+    @Html.HiddenFor(model => model.Region)
     @Html.HiddenFor(model => model.Woreda)
-     @Html.HiddenFor(model => model.ProjectNumber)
-     @Html.HiddenFor(model => model.Zone)
-     @Html.HiddenFor(model => model.FDP)
-     @Html.HiddenFor(model => model.Commodity)
-     @Html.HiddenFor(model => model.RequisitionNo)
-     @Html.HiddenFor(model => model.RequisitionId)
-     @Html.HiddenFor(model => model.Year)
-     @Html.HiddenFor(model => model.Month)
+    @Html.HiddenFor(model => model.ProjectNumber)
+    @Html.HiddenFor(model => model.Zone)
+    @Html.HiddenFor(model => model.FDP)
+    @Html.HiddenFor(model => model.Commodity)
+    @Html.HiddenFor(model => model.RequisitionNo)
+    @Html.HiddenFor(model => model.RequisitionId)
+    @Html.HiddenFor(model => model.Year)
+    @Html.HiddenFor(model => model.Month)
     @Html.HiddenFor(model => model.Round)
-     @Html.HiddenFor(model => model.Transporter)
-      @Html.HiddenFor(model => model.BidNumber)
-    @Html.HiddenFor(model=>model.CommodityID)
+    @Html.HiddenFor(model => model.Transporter)
+    @Html.HiddenFor(model => model.BidNumber)
+    @Html.HiddenFor(model => model.CommodityID)
     <h6 class="page-header">Dispatch Header</h6>
     <div class="row-fluid panel-body form-horizontal">
 
@@ -49,7 +48,7 @@
                 </div>
                 <div class="controls">
                     @Html.TextBoxFor(model => model.GIN)
-                    @Html.ValidationMessageFor(model=>model.GIN)
+                    @Html.ValidationMessageFor(model => model.GIN)
                 </div>
             </div>
 
@@ -74,7 +73,8 @@
         </div>
         <div class="span4">
             <div class="control-group">
-                    @Html.LabelFor(model => model.SINumber)
+                <div class="control-label">
+                    @Html.LabelFor(model => model.ShippingInstructionID)
                 </div>
                 <div class="controls">
                     @(Html.Kendo().ComboBoxFor(m => m.ShippingInstructionID)
@@ -86,14 +86,10 @@
                                     new { @reqDetailId = ViewBag.RequisitionDetailID, @siID = Model.ShippingInstructionID, @ComID = Model.CommodityID, @DaID = Model.DispatchAllocationID }))))
 
 
-
-
                     @Html.ValidationMessageFor(model => model.ShippingInstructionID)
 
                 </div>
-                <div class="control-label">
-                    <label for="a" id="AvailableAmount"></label>
-                </div>
+
             </div>
 
             <div class="control-group">
@@ -153,50 +149,50 @@
                     @Html.LabelFor(model => model.Commodity)
                 </div>
                 <div class="controls">
-                    
-                    
+
+
                     @Html.TextBoxFor(model => model.Commodity, new { Disabled = true })
                 </div>
             </div>
-        
 
-        <div class="control-group ">
-            <div class="control-label">
-                @Html.LabelFor(model => model.CommodityChildID)
-            </div>
-            <div class="controls">
-                         @(Html.Kendo().ComboBoxFor(m => m.CommodityChildID)
+
+            <div class="control-group ">
+                <div class="control-label">
+                    @Html.LabelFor(model => model.CommodityChildID)
+                </div>
+                <div class="controls">
+                    @(Html.Kendo().ComboBoxFor(m => m.CommodityChildID)
                               .Placeholder("Select Commodity")
                               .DataTextField("CommodityName")
                               .DataValueField("CommodityId")
                               .Filter(FilterType.Contains)
                               .DataSource(source => source.Read(read => read.Action("GetCommodities", "Dispatch", new { @dispatchAllocationId = Model.DispatchAllocationID }))))
-                
-                
-                @Html.ValidationMessageFor(model => model.CommodityChildID)
-                    
+
+
+                    @Html.ValidationMessageFor(model => model.CommodityChildID)
+
+                </div>
             </div>
-        </div>       
-            
+
 
             <div class="control-group ">
                 <div class="control-label">
                     @Html.LabelFor(model => model.UnitID)
                 </div>
                 <div class="controls">
-                    
+
                     @(Html.Kendo().ComboBoxFor(m => m.UnitID)
                               .Placeholder("Select Unit")
                               .DataTextField("Name")
                               .DataValueField("UnitId")
                               .Filter(FilterType.Contains)
                               .DataSource(source => source.Read(read => read.Action("GetUnities", "Dispatch")))
-                        )
-                        @Html.ValidationMessageFor(model => model.UnitID)
-                    
-                    
+                    )
+                    @Html.ValidationMessageFor(model => model.UnitID)
 
-                    
+
+
+
                 </div>
             </div>
             <div class="control-group ">
@@ -209,18 +205,18 @@
             </div>
             <div class="control-group ">
                 <div class="control-label">
-                    @Html.LabelFor(model => model.QuantityPerUnit,"Quantity in Qtl")
+                    @Html.LabelFor(model => model.QuantityPerUnit, "Quantity in Qtl")
                 </div>
                 <div class="controls">
-                    @Html.TextBoxFor(model => model.QuantityPerUnit,new { @id="txtQtl",@onchange = "onchangeevent();" })
+                    @Html.TextBoxFor(model => model.QuantityPerUnit, new { @id = "txtQtl", @onchange = "onchangeevent();" })
                 </div>
             </div>
-              <div class="control-group ">
+            <div class="control-group ">
                 <div class="control-label">
-                    @Html.LabelFor(model => model.Quantity,"Quantity in MT")
+                    @Html.LabelFor(model => model.Quantity, "Quantity in MT")
                 </div>
                 <div class="controls">
-                    @Html.TextBoxFor(model => model.Quantity,new { @readonly = "readonly" })
+                    @Html.TextBoxFor(model => model.Quantity, new { @readonly = "readonly" })
                 </div>
             </div>
         </div>
@@ -329,14 +325,14 @@
                 <div class="controls">
                     @Html.TextBoxFor(model => model.PlateNo_Trailer)
                 </div>
-               
+
             </div>
 
         </div>
         <div class="span4">
         </div>
     </div>
-   
+
 
 
 }
@@ -344,38 +340,12 @@
 
     jQuery('#txtQtl').on('input', function () {
         var amountEntered = $('#txtQtl').val();
-        var changedSi = $('#ShippingInstructionID').val();
-
-        var availableSIList = "@ViewBag.AvailableSIList";
         var amountPlanned = "@ViewBag.plannedAmount";
         var recivedAmount = "@ViewBag.recivedAmount";
         var remainngAmount = amountPlanned - recivedAmount;
         if ((amountEntered / 10) > remainngAmount) {
             alert("Dispatch amount must be less than the remaing Amount amount [ " + (remainngAmount * 10) + " Qtl ]!");
-            
-
-        var array = @Html.Raw(Json.Encode(@ViewBag.AvailableSIList));
-        for(var i = 0; i < array.length; i++) {
-            var str= array[i].siCodeId;
-            if(str ===parseInt(changedSi, 10) ) {
-                
-                if ((amountEntered / 10) > array[i].amount)
-                    {
-                    alert("Dispatch amount must be less than the Available amount [ " + (array[i].amount * 10) + " Qtl ]!");
-                $('#txtQtl').val(0);
-
-                $('#Quantity').val(0);
-                    }
-            }
-        }
-        //for(j = 0; j <availableSIList.length; j++)
-        //{
-        //    alert(availableSIList[j].amount);
-        //}
-        if ((amountEntered / 10) > amountPlanned) {
-            alert("Dispatch amount must be less than the planned amount [ " + (amountPlanned * 10) + " Qtl ]!");
             $('#txtQtl').val(0);
-
             $('#Quantity').val(0);
         }
 
@@ -396,17 +366,6 @@
         }
         $('#Quantity').val($('#txtQtl').val() / 10);
 
-    });
-    $("#ShippingInstructionID").change(function () {
-        var changedSi = $('#ShippingInstructionID').val();
-        var array = @Html.Raw(Json.Encode(@ViewBag.AvailableSIList));
-        for(var i = 0; i < array.length; i++) {
-            var str= array[i].siCodeId;
-            if(str ===parseInt(changedSi, 10) ) {
-                var hi =$('#AvailableAmount').text();
-                $('#AvailableAmount').text("Available Amount "+ array[i].amount);
-            }
-        }
     });
     $('.change_si_no').on('click',
                 function (e) {
@@ -442,65 +401,65 @@
 
 </script>
 @*<script type="text/javascript">
-   
-    function CalculateQuantityMT() {
-       
-        var unit = $('#UnitID').val();
-        var quantityInUnit = $('#QuantityInUnit').val();
-        if (unit == 8) {
-            var quantity = quantityInUnit / 1000;
-            $('#Quantity').val(quantity);
-        }
-        if (unit == 9) {
-            var total = quantityInUnit / 100;
-            $('#Quantity').val(total);
-        }
-        
-    };
 
-    function CalculateQuantityQTL() {
+        function CalculateQuantityMT() {
 
-        var unit = $('#UnitID').val();
-        var quantityInUnit = $('#QuantityInUnit').val();
-        if (unit == 8) {
-            var quantity = quantityInUnit / 100;
-            $('#Quantity').val(quantity);
-        }
-        if (unit == 9) {
-            var total = quantityInUnit;
-            $('#Quantity').val(total);
-        }
-
-    };
-
-   
-    $(document).ready(function() {
-        var unitPreference = '@ViewBag.UnitPreference';
-        $('#UnitID').change(function () {
-            if (unitPreference = 'MT') {
-                CalculateQuantityMT();
+            var unit = $('#UnitID').val();
+            var quantityInUnit = $('#QuantityInUnit').val();
+            if (unit == 8) {
+                var quantity = quantityInUnit / 1000;
+                $('#Quantity').val(quantity);
             }
-            if (unitPreference = 'QTL') {
-                alert("here");
-                CalculateQuantityQTL();
+            if (unit == 9) {
+                var total = quantityInUnit / 100;
+                $('#Quantity').val(total);
             }
-            
 
-        });
-    });
-    $(document).ready(function () {
-        var unitPreference = '@ViewBag.UnitPreference';
-        alert(unitPreference);
-        $('#QuantityInUnit').change(function () {
-            if (unitPreference ='MT') {
-                
+        };
+
+        function CalculateQuantityQTL() {
+
+            var unit = $('#UnitID').val();
+            var quantityInUnit = $('#QuantityInUnit').val();
+            if (unit == 8) {
+                var quantity = quantityInUnit / 100;
+                $('#Quantity').val(quantity);
+            }
+            if (unit == 9) {
+                var total = quantityInUnit;
+                $('#Quantity').val(total);
+            }
+
+        };
+
+
+        $(document).ready(function() {
+            var unitPreference = '@ViewBag.UnitPreference';
+            $('#UnitID').change(function () {
+                if (unitPreference = 'MT') {
                     CalculateQuantityMT();
                 }
-            if (unitPreference = 'QTL') {
-                alert("here");
-                CalculateQuantityQTL();
+                if (unitPreference = 'QTL') {
+                    alert("here");
+                    CalculateQuantityQTL();
                 }
 
+
+            });
         });
-    });
-</script>*@
+        $(document).ready(function () {
+            var unitPreference = '@ViewBag.UnitPreference';
+            alert(unitPreference);
+            $('#QuantityInUnit').change(function () {
+                if (unitPreference ='MT') {
+
+                        CalculateQuantityMT();
+                    }
+                if (unitPreference = 'QTL') {
+                    alert("here");
+                    CalculateQuantityQTL();
+                    }
+
+            });
+        });
+    </script>*@
