H.1.3.1 Optimize Regional Dashboard and edited caption for SINumber in CreateDispatch

--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -74,7 +74,7 @@
         <div class="span4">
             <div class="control-group">
                 <div class="control-label">
-                    @Html.LabelFor(model => model.ShippingInstructionID)
+                    @Html.LabelFor(model => model.SINumber)
                 </div>
                 <div class="controls">
                     @(Html.Kendo().ComboBoxFor(m => m.ShippingInstructionID)
