--- a/Web/Areas/EarlyWarning/Views/ReliefRequisition/Edit.cshtml
+++ b/Web/Areas/EarlyWarning/Views/ReliefRequisition/Edit.cshtml
@@ -4,11 +4,11 @@
 
 @{
     ViewBag.Title = "Edit";
+
     //Layout = "~/Views/Shared/_CATSLayout.cshtml";
     Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
     if (Model != null)
     {
-
         if (Model.ProgramID == 2) //i.e. PSNP
         {
             ViewBag.PageTitle = "Edit PSNP Requisition for Distribution";
@@ -22,131 +22,181 @@
 }
 @section Toolbar{
 
-    <a class="btn btn-fit-height grey-salt" data-buttontype="btn_back_to_list" href="@Url.Action("Allocation", "ReliefRequisition", new { Area = "EarlyWarning", id = @Model.RequisitionID })"><i class="fa fa-list"></i> @Html.Translate("Back to List")</a>
+    <a class="btn btn-fit-height grey-salt" data-buttontype="btn_back_to_list"
+       href="@Url.Action("Allocation", "ReliefRequisition",
+         new { Area = "EarlyWarning", id = @Model.RequisitionID })"><i class="fa fa-list"></i>@Html.Translate("Back to List")</a>
 }
 
-    @*@Html.Partial("_RequistionsLeftBar")*@
-    <div class="portlet light bordered" style="display: block;">
-        <div class="portlet-title">
-            <div class="caption font-green-sharp">
-                <i class="fa fa-list font-green-sharp"></i>
-                <span class="caption-subject bold uppercase"> @Html.Translate("Edit Details")</span>
-                <span class="caption-helper">  </span>
-            </div>
-            @*<div class="tools">
-                    <a href="#" class="collapse" data-original-title="" title=""></a>
-                    <a href="javascript:;" class="remove" data-original-title="" title=""></a>
-                </div>*@
-            <div class="actions">
-                <a class="btn btn-circle btn-default blue-sharp-stripe toolbar-btn loading-btn" data-loading-text="Saving..." data-buttontype="btn_save" data-submittedform="frm_Edit_requisition" title="" data-original-title="Save Change"><i class="fa fa-save"></i> @Html.Translate("Save")</a>
-                <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
-            </div>
-        </div>
-        <div class="portlet-body">
-            @using (Html.BeginForm("Edit", "ReliefRequisition", FormMethod.Post, new { id = "frm_Edit_requisition" }))
-            {
-                <div class="form-horizontal">
-                    @Html.HiddenFor(model => model.RequisitionID)
-                    @Html.HiddenFor(model => model.Status)
-                    @Html.HiddenFor(model => model.CommodityID)
-                    @Html.HiddenFor(model => model.RegionalRequestID)
-                    @Html.HiddenFor(model => model.ProgramID)
-                    @Html.HiddenFor(model => model.Round)
-                    @Html.HiddenFor(model => model.RegionID)
-                    @Html.HiddenFor(model => model.ZoneID)
-                    @Html.HiddenFor(model => model.RequestedDate)
-                    @*@Html.HiddenFor(model => model.RationID)*@
+<div id='dialogDiv' class='modal hide fade in'>
+    <div id='dialogContent'></div>
+</div>
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.RequisitionNo, new {@class = "control-label "})
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.RequisitionNo, new {@class = " form-control"})
-                                    @Html.ValidationMessageFor(model => model.RequisitionNo)
-                                </div>
+@*@Html.Partial("_RequistionsLeftBar")*@<div class="portlet light bordered" style="display: block;">
+    <div class="portlet-title">
+        <div class="caption font-green-sharp">
+            <i class="fa fa-list font-green-sharp"></i>
+            <span class="caption-subject bold uppercase"> @Html.Translate("Edit Details")</span>
+            <span class="caption-helper">  </span>
+        </div>
+        @*<div class="tools">
+                <a href="#" class="collapse" data-original-title="" title=""></a>
+                <a href="javascript:;" class="remove" data-original-title="" title=""></a>
+            </div>*@
+        <div class="actions">
+            @*<a class="btn btn-circle btn-default blue-sharp-stripe toolbar-btn loading-btn" data-loading-text="Saving..." data-buttontype="btn_save" data-submittedform="frm_Edit_requisition" title="" data-original-title="Save Change" onclick="EditMessageResult()"><i class="fa fa-save"></i> @Html.Translate("Save")</a>*@
+            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
+            @*<a class="btn btn-circle btn-default blue-sharp-stripe toolbar-btn loading-btn" data-loading-text="Saving..." data-buttontype="btn_save" data-submittedform="frm_Edit_requisition" title="" data-original-title="Save Change">@Html.Translate("Save")</a>*@
+            <input type="submit" onclick="" form="frm_Edit_requisition" class="btn btn-circle btn-default blue-sharp-stripe toolbar-btn" value="Save" />
+        </div>
+    </div>
+    <div class="portlet-body" id="EditReq">
+        @using (Html.BeginForm("Edit", "ReliefRequisition", FormMethod.Post, new { @class = "form", id = "frm_Edit_requisition" }))
+            {
+            <div class="form-horizontal">
+                @Html.HiddenFor(model => model.RequisitionID)
+                @Html.HiddenFor(model => model.Status)
+                @Html.HiddenFor(model => model.CommodityID)
+                @Html.HiddenFor(model => model.RegionalRequestID)
+                @Html.HiddenFor(model => model.ProgramID)
+                @Html.HiddenFor(model => model.Round)
+                @Html.HiddenFor(model => model.RegionID)
+                @Html.HiddenFor(model => model.ZoneID)
+                @*@Html.HiddenFor(model => model.RequestedDate)*@
+                @*@Html.HiddenFor(model => model.RationID)*@
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.RequisitionNo, new { @class = "control-label " })
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.ProgramID, new {@class = "control-label "})
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.Program.Name, null, new {disabled = "true", @class = "form-control"})
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.Round, new { @class = "control-label " })
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.Round, null, new { disabled = "true", @class = "form-control" })
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(m => m.RationID, "Ration", new { @class = "control-label " })
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.DropDownList("RationID", null, String.Empty, new { @class = "form-control" })
-                                    @*@Html.DropDownListFor(m => m.RationID, new SelectList(ViewBag.RationID, "RationID", "RefrenceNumber", ViewBag.RationSelected),string.Empty)*@
-                                    @Html.ValidationMessageFor(m => m.RationID)
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.RegionID, new {@class = "control-label "})
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.AdminUnit.Name, null, new {disabled = "true", @class = "form-control"})
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.ZoneID, new {@class = "control-label  "})
-                                </div>
-                                <div class="col-sm-8">
-                                    @Html.TextBoxFor(model => model.AdminUnit1.Name, null, new {disabled = "true", @class = "form-control"})
-                                </div>
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.RequisitionNo, new { @id = "RequisitionNo", @class = " form-control" })
+                                @Html.ValidationMessageFor(model => model.RequisitionNo)
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <div class="col-sm-4 control-label">
-                                    @Html.LabelFor(model => model.RequestedDate, new { @class = "cats-date-pref" })
-                                </div>
-                                <div class="col-sm-8">
-                                    @*<input class="cats-datepicker2 disabled form-control" type="text" id="RequestedDate" name="RequestedDate" />*@
-                                    @Html.TextBoxFor(model => model.RequestedDate, null, new {@id="RequestedDate",  @class = "cats-datepicker2 form-control" })
-                                </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.ProgramID, new { @class = "control-label " })
+                            </div>
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.Program.Name, null, new { @id = "ProgramID", disabled = "true", @class = "form-control" })
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.Round, new { @class = "control-label " })
+                            </div>
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.Round, null, new { @id = "Round", disabled = "true", @class = "form-control" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(m => m.RationID, "Ration", new { @class = "control-label " })
+                            </div>
+                            <div class="col-sm-8">
+                                @Html.DropDownList("RationID", null, String.Empty, new { @class = "form-control" })
+                                @*@Html.DropDownListFor(m => m.RationID, new SelectList(ViewBag.RationID, "RationID", "RefrenceNumber", ViewBag.RationSelected),string.Empty)*@
+                                @Html.ValidationMessageFor(m => m.RationID)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.RegionID, new { @class = "control-label " })
+                            </div>
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.AdminUnit.Name, null, new { @id = "RegionId", disabled = "true", @class = "form-control" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.ZoneID, new { @class = "control-label  " })
+                            </div>
+                            <div class="col-sm-8">
+                                @Html.TextBoxFor(model => model.AdminUnit1.Name, null, new { @id = "ZoneID", disabled = "true", @class = "form-control" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <div class="col-sm-4 control-label">
+                                @Html.LabelFor(model => model.RequestedDate, new { @class = "cats-date-pref" })
+                            </div>
+                            <div class="col-sm-8">
+                                @*<input class="cats-datepicker2 disabled form-control" type="text" id="RequestedDate" name="RequestedDate" />*@
+                                @Html.TextBoxFor(model => model.RequestedDate, null, new { @id = "RequestedDate", @class = "cats-datepicker2 form-control"})
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
                 @*<div class="box-footer text-center">
                         <button class="btn btn-primary " type="submit" data-submittedform="frm_Edit_requisition"><span class="fa fa-save"></span> Save</button>
                         <a class="btn  btn-default" href="@Url.Action("Index", "ReliefRequisition")"><span class="fa fa-lg fa-times-circle"></span> Cancel</a>
                     </div>*@
-            }
+        }
 
 
-        </div>
     </div>
+</div>
+
+
+<script type="text/javascript">
+
+        $('#frm_Edit_requisition').submit(function (e) {
+
+            var requisition = {
+                RequisitionID: $('#RequisitionID').val(),
+                CommodityID: $('#CommodityID').val(),
+                Status: $('#RequisitionID').val(),
+                RegionalRequestID: $('#RegionalRequestID').val(),
+                RequisitionNo: $('#RequisitionNo').val(),
+                ProgramID: $('#ProgramID').val(),
+                Round: $('#Round').val(),
+                RationID: $('#RationID').val(),
+                RegionID: $('#RegionId').val(),
+                ZoneID: $('#ZoneID').val(),
+                RequestedDate: $('#RequestedDate').val()
+            };
+
+            $.ajax({
+                type: "POST",
+                url: 'Url.Action("Edit", "ReliefRequisition")',
+                data: JSON.stringify(requisition),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (result) {
+
+                    if (result.status == "Ok") {
+                        var url = '@Url.Action("Allocation", "ReliefRequisition")?id=' + result.Id;
+                        window.location.href = url;
+                    } else {
+                        alert(result.message);
+                    }
+                },
+                error: function (result) {
+                    alert(result.message);
+                }
+            });
+
+            return false;
+        });
+</script>
